circuit-breakers/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-error
  labels:
    app: nginx-app
spec:
  containers:
  - name: nginx
    image: hariramprasanth/my-nginx:500-error
    ports:
    - containerPort: 80
