circuit-breakers/destinationRules.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-load-balancer
spec:
  host: nginx-service
  trafficPolicy:
      outlierDetection:
        consecutive5xxErrors: 2
        interval: 10s
        baseEjectionTime: 20s
        maxEjectionPercent: 100
