circuit-breakers/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-virtual-service
spec:
  hosts:
  - "*"
  gateways:
    - nginx-gateway
  http:
  - route:
    - destination:
        host: nginx-service
        subset: v1
        port: 
          number: 80
      weight: 50
    - destination:
        host: nginx-service
        subset: v2
        port: 
          number: 80
      weight: 50
